projetGL/src/test/deca/context/invalid/provided/invalide_02_affectation.deca
// Description Affectation et typage
// affectation string <- boolean
// Resultat : 
// ERROR


{
    string a = 0;
    boolean b = true;
    a = b;
}